--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,17 @@
 
 <head>
   <meta charset="UTF-8"/>
+
+
 </head>
 
 <body>
   <div id="app"></div>
-
+  <script src="https://www.youtube.com/iframe_api"></script>
   <script src="bundle.js"></script>
-  <script src="vidscript.js"></script>
+
+
+
 </body>
 
 </html>
